[package]
name = "rust_realm2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version =  "0.31.1", features = ['base64', 'secp-recovery', "std"] }
bitcoincore-rpc-json = "0.18.0"
bitcoincore-rpc = "0.18.0"
miniscript = "11.0.0"

clap = { version = "4.4.14", features = ["derive"] }

serde = "1"
serde_json = "1"

nom = "7.1.3"

dirs = "5.0.1"
